fix image css and alignment

--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -39,6 +39,13 @@
   color: gray;
 }
 
+.reveal section img {
+  background:none;
+  border:none;
+  box-shadow:none; 
+}
+
+
 #gp-logo img {
   max-height: 1.5em;
   max-width: none;
@@ -48,4 +55,3 @@
   color: #e49436;
   font-size: 1.5em !important;
 }
-
